--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Androidcrud">
-        <activity android:name=".AddMovieActivity"></activity>
+        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".AddMovieActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
